test/modules/vass/userInsteadOfStandard/foo2.good
ChapelIO.chpl:11: In function 'serializeDefaultImpl':
ChapelIO.chpl:11: warning: need '(?)' on the type 'fileWriter' of the formal 'writer' because this type is generic
foo2.chpl:11: error: done
